# vex

./: 4.vx_inspect.json  Cargo.toml  readme.md  syntax.md
ext/: language-configuration.json  package.json
ext/syntaxes/: vex.tmLanguage.json
src/: dbg.rs  main.rs  mod.rs
src/ast/: expr.rs  mod.rs  stmt.rs  vtype.rs
src/engine/: interpreter.rs  mod.rs  resolver.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/memory/: environment.rs  mod.rs
src/parser/: mod.rs  parser.rs
src/parser/declarations/: function.rs  import.rs  mod.rs  variable.rs
src/parser/statements/: control_flow.rs  mod.rs
src/utils/: mod.rs
src/utils/devtools/: mod.rs
src/utils/devtools/inspector/: mod.rs
src/utils/logger/: core.rs  error.rs  mod.rs
test/: 1.vx  2.vx  3.vx  4.vx  all_syntax.vx  bracket_err.vx  comments.vx  multiline.vx  semicolon.vx  vardecl.vx
vex-cli/: Cargo.toml
vex-cli/src/: args.rs  compiler.rs  main.rs  metrics.rs
vex-core/: Cargo.toml  README.md
vex-core/src/: ast.rs  lib.rs  source.rs  span.rs  token.rs  trace.rs  value.rs
vex-diagnostic/: Cargo.toml  README.md
vex-diagnostic/src/: diagnostic.rs  error_codes.rs  lib.rs
vex-inspector/: Cargo.toml  README.md
vex-inspector/src/: app.rs  lib.rs  report.rs  ui.rs
vex-inspector/src/gui/: mod.rs
vex-lexer/: Cargo.toml  README.md
vex-lexer/src/: cursor.rs  keywords.rs  lib.rs
vex-lexer/src/classic/: cursor.rs  mod.rs
vex-lexer/src/classic/handlers/: identifier.rs  mod.rs
vex-lexer/src/handlers/: fstring.rs  number.rs  string.rs  whitespace.rs
vex-lexer/src/logos/: mod.rs
vex-loader/: Cargo.toml  README.md
vex-loader/src/: lib.rs
vex-parser/: Cargo.toml  README.md
vex-parser/docs/: 01_introduction_and_core.md  02_import_statement.md  03_variable_declaration.md  04_functions_and_structs.md  05_control_flow.md  06_expressions_pratt.md  07_enums_and_miscellaneous.md
vex-parser/docs/tr/: 01_introduction_and_core.md  02_import_statement.md  03_variable_declaration.md  04_functions_and_structs.md  05_control_flow.md  06_expressions_pratt.md  07_enums_and_miscellaneous.md
vex-parser/src/: lib.rs  parser.rs  preparser.rs
vex-parser/src/declarations/: definedecl.rs  enumdecl.rs  fndecl.rs  impldecl.rs  importdecl.rs  macrodecl.rs  mod.rs  structdecl.rs  vardecl.rs
vex-parser/src/statements/: blockstmt.rs  breakstmt.rs  continuestmt.rs  exprstmt.rs  forstmt.rs  ifstmt.rs  matchstmt.rs  mod.rs  returnstmt.rs  whilestmt.rs
vex-semantics/: Cargo.toml
