[package]
name = "vex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", optional = true }
rust-embed = { version = "8.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
mime_guess = { version = "2.0.5", optional = true }
http = { version = "1.2.0", optional = true }

[features]
default = []
inspector = ["dep:axum", "dep:rust-embed", "dep:tokio", "dep:tower-http", "dep:mime_guess", "dep:http"]
