[package]
name = "vex-diagnostic"
version = "0.1.0"
edition = "2024"

[dependencies]
vex-core = { path = "../vex-core" }
colored = "2.1.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"], optional = true }
ariadne = "0.6.0"

[features]
inspector = ["vex-core/inspector", "serde"]
