[package]
name = "vex-inspector"
version = "0.2.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
vex-core = { path = "../vex-core", features = ["inspector"] }
vex-lexer = { path = "../vex-lexer", features = ["inspector"] }
vex-parser = { path = "../vex-parser", features = ["inspector"] }
vex-diagnostic = { path = "../vex-diagnostic", features = ["inspector"] }
serde_json = "1.0"

[features]
use-logos = ["vex-lexer/use-logos", "vex-parser/use-logos"]
