[package]
name = "vex-lexer"
version = "0.2.0"
edition = "2024"

[dependencies]
vex-core = { path = "../vex-core" }
vex-diagnostic = { path = "../vex-diagnostic" }
serde = { version = "1.0", features = ["derive"], optional = true }
logos = { version = "0.16.1", optional = true }

[features]
inspector = ["vex-core/inspector", "dep:serde"]
use-logos = ["dep:logos"]

[dev-dependencies]
insta = "1.46.3"
