[package]
name = "vex-semantics"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.20.2"
lasso = "0.7.3"
rustc-hash = "2.1.1"
vex-core = { path = "../vex-core" }
vex-lexer = { path = "../vex-lexer" }
vex-parser = { path = "../vex-parser" }

[features]
inspector = ["vex-core/inspector", "vex-lexer/inspector", "vex-parser/inspector"]
use-logos = ["vex-lexer/use-logos", "vex-parser/use-logos"]

[dev-dependencies]
insta = "1.46.3"
